<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.schwergsy.kentstate.SignUp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/errand_logo"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/signup_username"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/username"
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@drawable/signupfields"/>


    <EditText
        android:id="@+id/signup_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@drawable/signupfields"/>


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/email_hint"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginBottom="13dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/signupfields"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwordReq"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:paddingLeft="37dp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/emailReq"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:paddingLeft="37dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:id="@+id/done_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_button"
            android:text="@string/done"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:onClick="done"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/cancel_button"
            android:layout_marginTop="6dp"
            android:text="Cancel"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:onClick="cancel"/>

    </LinearLayout>




</LinearLayout>