<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Login"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="54dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/filler1"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/errand_logo"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="49dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/filler2"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.13" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/username"
        android:layout_marginBottom="9dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginBottom="13dp"/>

    <TextView
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/filler3"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.10" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/login"
        android:background="@drawable/login_button"
        android:layout_marginBottom="7dp"
        android:textColor="@color/white"
        android:onClick="signIn"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/signup"
        android:background="@drawable/signup_button"
        android:textColor="@color/white"
        android:onClick="goToSignUp"/>

</LinearLayout>

